--- a/lab/challenge.yml
+++ b/lab/challenge.yml
@@ -1,28 +1,21 @@
 - hosts: host01
   tasks:
   - name: "copy website"
-    become: yes
-    become_user: root
     replace: 
       path: /var/www/default/index.html
       regexp: 'World'
       replace: 'HOST1'
-      backup: yes 
 - hosts: host02
+  tasks:
   - name: "copy website"
-    become: yes
-    become_user: root
-    replace: 
-      path: /var/www/default/index.html
-      regexp: 'World'
-      replace: 'HOST3'
-      backup: yes 
-- hosts: host03
-  - name: "copy website"
-    become: yes
-    become_user: root
     replace: 
       path: /var/www/default/index.html
       regexp: 'World'
       replace: 'HOST2'
-      backup: yes 
+- hosts: host03
+  tasks:
+  - name: "copy website"
+    replace: 
+      path: /var/www/default/index.html
+      regexp: 'World'
+      replace: 'HOST3'
